Add images directory and add pizza img and description in pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Pizza</h1>
+    <img src="../images/pizza.webp">  
+    <h2>Classic Margherita Pizza</h2>
+    <p>
+        The classic Margherita Pizza is a simple yet delicious recipe;
+        the perfect starting point if you’re new to the world of pizza making.
+        Creamy mozzarella and delicious,
+        homemade pizza sauce are a match made in heaven.
+    </p>
 </body>
 </html>
