--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Recipe Title</a>
+    <a href="recipes/pizza.html">Pizza Recipe</a>
     
 </body>
 </html>
