Add Steps heading and list in pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -22,5 +22,21 @@
         <li>4 tbsp Classic Pizza Sauce</li>
         <li>56.6g mozzarella, torn into pieces</li>
     </ul>
+    <h2>Steps:</h2>
+    <ol>
+        <li>Prepare your pizza dough ahead of time.</li>
+        <li>
+            For the sauce for this pizza,
+            we recommend preparing our easy Classic Pizza Sauce. With a hint of garlic,
+            salt and basil, it's the ideal pizza sauce that will help to bring out the 
+            flavours in the other ingredients used here</li>
+        <li>Fire up your pizza oven. Aim for 500˚C on the stone baking board inside.</li>
+        <li>
+            Using a small amount of flour, dust your pizza peel. 
+            Stretch the pizza dough ball out to 12″/16″ and lay it out on your pizza peel.
+            Top with the mozzarella.</li>
+        <li>Slide the pizza off the peel and into your pizza oven, making sure to rotate the pizza regularly.</li>
+        <li>Once cooked, remove the pizza from the oven and top with whole, fresh basil leaves. Serve immediately</li>
+    </ol>
 </body>
 </html>
