--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza Recipe</a>
+    <ul>
+        <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="recipes/frenchFries.html">French Fries Recipe</a></li>
+    </ul>
+
     
 </body>
 </html>
